Archive2/ff/7c08f44253e232/output
main.cpp:1:1: error: use of undeclared identifier 'std'
std::reverse(string.begin(), string.end());
^
1 error generated.
